# android-eye

./: .gitignore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt
